Fix width of html document. Doesn't fix the scrollbars though

--- a/src/list/list.css
+++ b/src/list/list.css
@@ -8,6 +8,15 @@ body {
     max-width: 400px;
 }
 
+/* This ensures no horizontal overflow. */
+#root,
+main,
+html,
+body,
+:root {
+    min-width: -moz-min-content;
+}
+
 section > div {
     padding: 0.2em 0;
 }
@@ -25,6 +34,7 @@ nav {
     position: sticky;
     top: 0;
     z-index: 10;
+    min-width: -moz-max-content;
 }
 
 .topbar a,
